--- a/server/views/questions.jade
+++ b/server/views/questions.jade
@@ -47,7 +47,7 @@ html
         hr
         ul.list-unstyled.components
           li
-            a(href='home')
+            a(href='/home')
               i.fas.fa-home
               | Home
           li.active
@@ -56,7 +56,7 @@ html
               | Courses
               ul#coursesSubmenu.collapse.list-unstyled
                 li
-                  a(href='courses') Current Courses
+                  a(href='/courses') Current Courses
                 li
                   a(href='#') Search Courses
           li.active
@@ -65,13 +65,13 @@ html
               | Questions
               ul#questionsSubmenu.collapse.list-unstyled
                 li
-                  a(href='questions') Ask a Question
+                  a(href='/questions') Ask a Question
                 li
-                  a(href='questions_search') Search Questions
+                  a(href='/questions_search') Search Questions
                 li
-                  a(href='questions_asked') Asked Questions
+                  a(href='/questions_asked') Asked Questions
           li
-            a(href='professors')
+            a(href='/professors')
               i.fas.fa-chalkboard-teacher
               | Professors
           li.active
@@ -80,13 +80,13 @@ html
               | Discussions
               ul#discussionsSubmenu.collapse.list-unstyled
                 li
-                  a(href='discussions') Discussion Board
+                  a(href='/discussions') Discussion Board
                 li
-                  a(href='chat') Group Chats
+                  a(href='/chat') Group Chats
         hr
         ul.list-unstyled.components
           li
-            a(href='settings')
+            a(href='/settings')
               i.fas.fa-cog
               | Settings
           li
@@ -101,7 +101,7 @@ html
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
             .logo
-              a(href='Home')
+              a(href='/home')
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
 
