--- a/server/views/prof_questions.jade
+++ b/server/views/prof_questions.jade
@@ -44,25 +44,35 @@ html
               .row.justify-content-center
                 img#profilepic(src='/images/donut.png')
           h2#profilename.text-center Seth Thompson
-          h3.text-center  
+          h3.text-center
         hr
         ul.list-unstyled.components
           li
-            a(href='prof_home')
+            a(href='/prof_home')
               i.fas.fa-home
               | Home
           li
-            a(href='prof_courses')
+            a(href='/prof_courses')
               i.fas.fa-book
               | Courses
           li
-            a(href='prof_questions')
+            a(href='/prof_questions')
               i.fas.fa-question-circle
               | Questions
+
+          li.active
+            a(href='#scheduleSubmenu' data-toggle='collapse' aria-expanded='false')
+              i.fas.fa-calendar
+              | Schedule
+            ul#scheduleSubmenu.collapse.list-unstyled
+              li
+                a(href='/prof_schedule') View Schedule(s)
+              li 
+                a(href='/prof_schedule/add_schedule') Add Schedule(s)
         hr
         ul.list-unstyled.components
           li
-            a(href='settings')
+            a(href='/settings')
               i.fas.fa-cog
               | Settings
           li
@@ -71,7 +81,7 @@ html
               | Logout
       // Page Content
       #page
-        nav.navbar.navbar-expand-ml
+        nav.navbar.navbar-expand-md
           #navbar-header.container-fluid
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
