--- a/server/views/prof_schedule.jade
+++ b/server/views/prof_schedule.jade
@@ -4,14 +4,14 @@ html
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title Maple Donut - Courses Overview
+    title Maple Donut - Professors
 
     // 1,2 - CSS BOOTSTRAP LINK
     // 3 - CUSTOM CSS LINKS
     // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    link(rel='stylesheet' href='/stylesheets/prof_courses.css')
+    link(rel='stylesheet' href='/stylesheets/prof_schedule.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
 
     // 1 - FONT AWESOME SCRIPT
@@ -20,7 +20,7 @@ html
     // 4 - Bootstrap JS
     // 5 - jQuery Custom Scroller CDN
     // 6 - Sidebar Animation JS
-    // 7,8 - Google Auth 
+    // 7,8 - Google Auth
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
@@ -43,50 +43,35 @@ html
               .row.justify-content-center
                 img#profilepic(src='/images/donut.png')
           h2#profilename.text-center Seth Thompson
-          h3.text-center  
+          h3.text-center
         hr
         ul.list-unstyled.components
           li
-            a(href='home')
+            a(href='/prof_home')
               i.fas.fa-home
               | Home
-          li.active
-            a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
+          li
+            a(href='/prof_courses')
               i.fas.fa-book
               | Courses
-              ul#coursesSubmenu.collapse.list-unstyled
-                li
-                  a(href='courses') Current Courses
-                li
-                  a(href='#') Search Courses
-          li.active
-            a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
+          li
+            a(href='/prof_questions')
               i.fas.fa-question-circle
               | Questions
-              ul#questionsSubmenu.collapse.list-unstyled
-                li
-                  a(href='questions') Ask a Question
-                li
-                  a(href='questions_search') Search Questions
-                li
-                  a(href='questions_asked') Asked Questions
-          li
-            a(href='professors')
-              i.fas.fa-chalkboard-teacher
-              | Professors
+
           li.active
-            a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
-              i.fas.fa-comments
-              | Discussions
-              ul#discussionsSubmenu.collapse.list-unstyled
-                li
-                  a(href='discussions') Discussion Board
-                li
-                  a(href='chat') Group Chats
+            a(href='#scheduleSubmenu' data-toggle='collapse' aria-expanded='false')
+              i.fas.fa-calendar
+              | Schedule
+            ul#scheduleSubmenu.collapse.list-unstyled
+              li
+                a(href='/prof_schedule') View Schedule(s)
+              li 
+                a(href='/prof_schedule/add_schedule') Add Schedule(s)
         hr
         ul.list-unstyled.components
           li
-            a(href='settings')
+            a(href='/settings')
               i.fas.fa-cog
               | Settings
           li
@@ -100,22 +85,14 @@ html
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
             .logo
-              a(href='Home')
+              a(href='/prof_home')
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
-        #content
-          #courseContainer
-            h3.text-center Search Courses
-            .d-flex.justify-content-center.h-100
-              .container.h-100
-                .d-flex.justify-content-center.h-100
-                  .searchBar(id='search_bar')
-                    input.searchInput(id='search_input' type='text' placeholder='e.g. "CMPT355" or "Artificial Intelligence"')
-                    button.searchIcon(id='search_icon' type='submit')
-                      i.fas.fa-search
-            hr
-            h3.text-center Your Courses
-            .d-flex.justify-content-center
+      #content
+        #courseContainer
+          h1.text-center Your Schedules
+          .d-flex.justify-content-center
+            if locals.data != Null
               for courses in locals.data
                 .card(id='courseCard')
                   h3.text-center #{courses.course_name}
@@ -130,5 +107,8 @@ html
                     a.btn.btn-primary.btn-block.btn-lg(href='/questions_asked') Questions Overview
                     hr#invisible_line_break
                     a.btn.btn-danger.btn-block.btn-lg(href='professors/'+courses.course_name id='available_prof_button') Check Available Professors
+            else
+              br
+              h4.text-center You currently don't have any schedules :(
+        hr
     .overlay
-
