--- a/server/views/professors.jade
+++ b/server/views/professors.jade
@@ -20,7 +20,7 @@ html
     // 4 - Bootstrap JS
     // 5 - jQuery Custom Scroller CDN
     // 6 - Sidebar Animation JS
-    // 7,8 - Google Auth 
+    // 7,8 - Google Auth
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
@@ -43,7 +43,7 @@ html
               .row.justify-content-center
                 img#profilepic(src='/images/donut.png')
           h2#profilename.text-center Seth Thompson
-          h3.text-center  
+          h3.text-center
         hr
         ul.list-unstyled.components
           li
@@ -133,11 +133,11 @@ html
                   .card
                     if names.available == 1
                       img(src='/images/person.png' alt='Avatar')
-                      .cardContainer 
+                      .cardContainer
                         h3.text-center #{names.name}
                     else
                       img(src='/images/person_offline.png' alt='Avatar')
-                      .cardContainer 
+                      .cardContainer
                         h3.text-center(style='color: gray;') #{names.name}
 
                     .button_container
@@ -146,6 +146,6 @@ html
                         h5.text-center Available
                       else
                         h5.text-center(style='color: gray;') Not Available
-                      a.btn.btn-primary.btn-block(href='schedule/'+ names.name id='schedule_button') Check Schedule
-                  
+                      a.btn.btn-primary.btn-block(href='schedule/'+ names.name id='schedule_button') View Answered Questions
+
     .overlay
