--- a/server/views/schedule.jade
+++ b/server/views/schedule.jade
@@ -11,7 +11,7 @@ html
     // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    link(rel='stylesheet' href='/stylesheets/professors.css')
+    link(rel='stylesheet' href='/stylesheets/schedule.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
 
     // 1 - FONT AWESOME SCRIPT
@@ -20,7 +20,7 @@ html
     // 4 - Bootstrap JS
     // 5 - jQuery Custom Scroller CDN
     // 6 - Sidebar Animation JS
-    // 7,8 - Google Auth 
+    // 7,8 - Google Auth
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
@@ -43,11 +43,11 @@ html
               .row.justify-content-center
                 img#profilepic(src='/images/donut.png')
           h2#profilename.text-center Seth Thompson
-          h3.text-center  
+          h3.text-center
         hr
         ul.list-unstyled.components
           li
-            a(href='home')
+            a(href='/home')
               i.fas.fa-home
               | Home
           li.active
@@ -56,7 +56,7 @@ html
               | Courses
               ul#coursesSubmenu.collapse.list-unstyled
                 li
-                  a(href='courses') Current Courses
+                  a(href='/courses') Current Courses
                 li
                   a(href='#') Search Courses
           li.active
@@ -65,11 +65,11 @@ html
               | Questions
               ul#questionsSubmenu.collapse.list-unstyled
                 li
-                  a(href='questions') Ask a Question
+                  a(href='/questions') Ask a Question
                 li
-                  a(href='questions_search') Search Questions
+                  a(href='/questions_search') Search Questions
                 li
-                  a(href='questions_asked') Asked Questions
+                  a(href='/questions_asked') Asked Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
@@ -80,13 +80,13 @@ html
               | Discussions
               ul#discussionsSubmenu.collapse.list-unstyled
                 li
-                  a(href='discussions') Discussion Board
+                  a(href='/discussions') Discussion Board
                 li
-                  a(href='chat') Group Chats
+                  a(href='/chat') Group Chats
         hr
         ul.list-unstyled.components
           li
-            a(href='settings')
+            a(href='/settings')
               i.fas.fa-cog
               | Settings
           li
@@ -100,29 +100,38 @@ html
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
             .logo
-              a(href='Home')
+              a(href='/home')
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
+
       #content
-        h3.text-center Schedule for #{locals.teacher}
-
-        hr
-        .d-flex.justify-content-center
-        .searchResultContainer
-        if locals.course[0].course_name != Null
-          for session in locals.course
-            .card
-              .cardContainer
-                  h4.text-center #{session.course_name}
-                  h3.text-center #{session.available_day}
-                  h4.text-center #{session.from_time}
-                  h4.text-center -
-                  h4.text-center #{session.to_time}
-
-        else
+        a(href='/schedule/'+locals.teacher+'/current_prof_schedule') Check #{locals.teacher} Schedule
+        #courseContainer
+          h1.text-center #{locals.teacher}
+          h4.text-center Labels/Tags used for Questions Asked:
+          hr
           .d-flex.justify-content-center
-          .searchResultContainer
-          .card
-            .cardContainer
-              h4.text-center No sessions are currently available for this week
+            if locals.data != Null
+              for session in locals.data
+                .card(id='courseCard')
+                  p(id='no_margin_paragraph').text-center
+                    small
+                      small LABEL:
+                  h3.text-center #{session.label}
+                  hr
+                  .title_container(id='cardTitle')
+                    p(id='no_margin_paragraph').text-center
+                    small
+                      small
+                        small COURSE:
+                    p(id='card_text').text-center  #{session.course_name}
+                  hr(id='no_margin_line_break')
+                  p(id='no_margin_paragraph').text-center
+                    small
+                      small
+                        small COURSE OPTIONS
+                  .cardContainer(id='cardOptions')
+                    a.btn.btn-primary.btn-block.btn-lg(href='/schedule/'+locals.teacher+'/'+session.label+'/view_answers') View Questions
+                    a.btn.btn-danger.btn-block.btn-lg(href='https://us05web.zoom.us/s/81138724882?pwd=NmtNTGExdFZaVGdKOXlDYW4xWjUvdz09') Zoom Link
+                      i.fas.fa-video.fa-fw
     .overlay
