--- a/server/views/view_prof_schedule.jade
+++ b/server/views/view_prof_schedule.jade
@@ -4,14 +4,14 @@ html
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title Maple Donut - Courses Overview
+    title Maple Donut - Professors
 
     // 1,2 - CSS BOOTSTRAP LINK
     // 3 - CUSTOM CSS LINKS
     // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    link(rel='stylesheet' href='/stylesheets/prof_courses.css')
+    link(rel='stylesheet' href='/stylesheets/schedule.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
 
     // 1 - FONT AWESOME SCRIPT
@@ -20,7 +20,7 @@ html
     // 4 - Bootstrap JS
     // 5 - jQuery Custom Scroller CDN
     // 6 - Sidebar Animation JS
-    // 7,8 - Google Auth 
+    // 7,8 - Google Auth
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
@@ -43,11 +43,11 @@ html
               .row.justify-content-center
                 img#profilepic(src='/images/donut.png')
           h2#profilename.text-center Seth Thompson
-          h3.text-center  
+          h3.text-center
         hr
         ul.list-unstyled.components
           li
-            a(href='home')
+            a(href='/home')
               i.fas.fa-home
               | Home
           li.active
@@ -56,7 +56,7 @@ html
               | Courses
               ul#coursesSubmenu.collapse.list-unstyled
                 li
-                  a(href='courses') Current Courses
+                  a(href='/courses') Current Courses
                 li
                   a(href='#') Search Courses
           li.active
@@ -65,11 +65,11 @@ html
               | Questions
               ul#questionsSubmenu.collapse.list-unstyled
                 li
-                  a(href='questions') Ask a Question
+                  a(href='/questions') Ask a Question
                 li
-                  a(href='questions_search') Search Questions
+                  a(href='/questions_search') Search Questions
                 li
-                  a(href='questions_asked') Asked Questions
+                  a(href='/questions_asked') Asked Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
@@ -80,13 +80,13 @@ html
               | Discussions
               ul#discussionsSubmenu.collapse.list-unstyled
                 li
-                  a(href='discussions') Discussion Board
+                  a(href='/discussions') Discussion Board
                 li
-                  a(href='chat') Group Chats
+                  a(href='/chat') Group Chats
         hr
         ul.list-unstyled.components
           li
-            a(href='settings')
+            a(href='/settings')
               i.fas.fa-cog
               | Settings
           li
@@ -95,40 +95,27 @@ html
               | Logout
       // Page Content
       #page
-        nav.navbar.navbar-expand-md
+        nav.navbar.navbar-expand-ml
           #navbar-header.container-fluid
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
             .logo
-              a(href='Home')
+              a(href='/home')
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
-        #content
-          #courseContainer
-            h3.text-center Search Courses
-            .d-flex.justify-content-center.h-100
-              .container.h-100
-                .d-flex.justify-content-center.h-100
-                  .searchBar(id='search_bar')
-                    input.searchInput(id='search_input' type='text' placeholder='e.g. "CMPT355" or "Artificial Intelligence"')
-                    button.searchIcon(id='search_icon' type='submit')
-                      i.fas.fa-search
-            hr
-            h3.text-center Your Courses
-            .d-flex.justify-content-center
-              for courses in locals.data
-                .card(id='courseCard')
-                  h3.text-center #{courses.course_name}
-                  .title_container(id='cardTitle')
-                    p(id='card_text').text-center  #{courses.course_title}
-                  hr(id='no_margin_line_break')
-                  p(id='no_margin_paragraph').text-center 
-                    small 
-                      small 
-                        small COURSE OPTIONS
-                  .cardContainer(id='cardOptions')
-                    a.btn.btn-primary.btn-block.btn-lg(href='/questions_asked') Questions Overview
-                    hr#invisible_line_break
-                    a.btn.btn-danger.btn-block.btn-lg(href='professors/'+courses.course_name id='available_prof_button') Check Available Professors
-    .overlay
+      #content
+        .d-flex.justify-content-center
+          if locals.schedule != Null
+            for schedule in locals.schedule
+              .card(id='courseCard')
+                h4.text-center #{schedule.course_id}
+                #{schedule.available_day}
+                #{schedule.from_time}
+                #{schedule.to_time}
+                #{schedule.zoom_link}
 
+          else
+            .card(id='courseCard')
+              h4.text-center No Schedules Available
+
+    .overlay
