--- a/server/views/prof_add-schedule.jade
+++ b/server/views/prof_add-schedule.jade
@@ -154,10 +154,10 @@ html
                   option(type='text' value='7:00PM') 7:00 PM
                   option(type='text' value='8:00PM') 8:00 PM
                   option(type='text' value='9:00PM') 9:00 PM
-
+            br
             .d-xl-flex.justify-content-center.h-100
-              button.btn.btn-primary(type='submit' id='submit_button') Submit Question
-                i.fab.fa-telegram-plane
+              button.btn.btn-primary(type='submit' id='submit_button') Submit 
+                i.fas.fa-check
               .col-md-auto
               button.btn.btn-danger(type='reset' id='clear_button') Clear
                 i.fas.fa-trash
