--- a/server/public/stylesheets/home.css
+++ b/server/public/stylesheets/home.css
@@ -85,24 +85,28 @@ a:focus {
     text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
 }
 
+/* ---------------------------------------------------
+    LINE BREAK STYLE
+----------------------------------------------------- */
+
+#invisible_line_break{
+    margin-bottom: 12px;
+    border-bottom: 2px solid;
+    
+}
 
 /* ---------------------------------------------------
     CARD STYLE
 ----------------------------------------------------- */
 
-.searchResultContainer{
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
 .card{
-    padding: 15px;
-    margin: 15px;
-    width: 450px;
+    padding: 2px;
+    margin: 8px;
+    height: 225px;
+    width: 225px;
     
     background-color: #252525;
+    border-radius: 10px;
     box-shadow: 0 2px 4px 0 rgba(211,211,211,0.2);
     transition: all 0.5s ease;
 }
@@ -113,19 +117,16 @@ a:focus {
     transition: all 0.25s ease;
 }
 
-.card h3{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 22px;
-    letter-spacing: 1px;
-    color: #FCA926;
+.card i{
+    opacity: 0.7;
 }
 
-.card p{
-    margin-bottom: 2px;
-    font-weight: 400;
+.card a{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+
+    font-weight: bold;
+    letter-spacing: 0.7px;
     font-size: 18px;
-    color: #eeeeeecc;
-    text-shadow: 0px 1px 2px rgb(111, 111, 111);
-    letter-spacing: 1px;
 }
