--- a/server/public/stylesheets/prof_home.css
+++ b/server/public/stylesheets/prof_home.css
@@ -40,6 +40,41 @@ a:focus {
     font-family: 'Roboto', sans-serif;
 }
 
+#content h1{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    letter-spacing: 1px;
+    color: #FCA926;
+    text-shadow: 0px 1px 2px rgb(197, 161, 119)
+}
+
+#content h3{
+    margin: 0px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 22px;
+    letter-spacing: 1px;
+    color: #FCA926;
+    text-shadow: 0px 1px 2px rgb(197, 161, 119)
+}
+
+#content h4{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: #eeeeeecc;
+    text-shadow: 0px 1px 2px rgb(111, 111, 111)
+}
+
+#content h5{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    color: #eeeeeecc;
+    text-shadow: 0px 1px 2px rgb(111, 111, 111)
+}
+
+
 #page #navbar-header h3{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
@@ -48,4 +83,50 @@ a:focus {
     letter-spacing: 2px;
     color: #FFF;
     text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
+}
+/* ---------------------------------------------------
+    LINE BREAK STYLE
+----------------------------------------------------- */
+
+#invisible_line_break{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid;
+    
+}
+
+/* ---------------------------------------------------
+    CARD STYLE
+----------------------------------------------------- */
+
+.card{
+    padding: 2px;
+    margin: 8px;
+    height: 250px;
+    width: 250px;
+    
+    background-color: #252525;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px 0 rgba(211,211,211,0.2);
+    transition: all 0.5s ease;
+}
+
+.card:hover{
+    background-color: #252525;
+    box-shadow: 0 0px 8px 0 #FCA926;
+    transition: all 0.25s ease;
+}
+
+.card i{
+    opacity: 0.7;
+}
+
+.card a{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+
+    font-weight: bold;
+    letter-spacing: 0.7px;
+    font-size: 18px;
 }
