Added viewing for professor schedule

--- a/server/views/professors.jade
+++ b/server/views/professors.jade
@@ -147,5 +147,6 @@ html
                       else
                         h5.text-center(style='color: gray;') Not Available
                       a.btn.btn-primary.btn-block(href='schedule/'+ names.name id='schedule_button') View Answered Questions
+                      a.btn.btn-danger.btn-block(href='/schedule/'+names.name+'/current_prof_schedule') Check Schedule
 
     .overlay
